# bot-sim

./: README.md  push.sh
bot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
bot/bot/: rotate_wheel.py
bot/launch/: bot.launch.py
carto/config/: backpack_3d.lua
rm_driver/livox_ros_driver2/src/config/: MID360_config.json
rm_simulation/pb_rm_simulation/urdf/: simulation_waking_robot.xacro
